Fix menu padding on mobile

--- a/style.css
+++ b/style.css
@@ -4948,6 +4948,6 @@ header nav.nav__primary {
   }
 
   header nav.nav {
-    margin-top: 20px;
+    margin-top: 0px;
   }
 }
